2005-12-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dialogs.py: Add dialogs, stolen and extended from gazpacho.

2005-12-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/common.py:
	* kiwi/ui/test/listener.py:
	* kiwi/ui/test/player.py:
	Add API documentation, almost complete now.
	Also add a timeout for accessing widgets, this will help us to handle
	situations where it takes some time for some widgets to be created.
	Also ignore eventual errors when the window is closed.
	Fix support for selection of multiple rows in KiwiList and
	add support for ComboBox.
	 
	* tools/epyrun:
	Do not ignore directories called test.
	
2005-12-06  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (BoolConverter.from_string): Do not 
	return a function, instead call the function and return the 
	value of it. Sigh.
	(BoolConverter.from_string): Always return a boolean, default
	to False

2005-12-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (converter): New baseclass
	(BaseDateTimeConverter): New baseclass for datetime.*
	(DateTimeConverter):
	(TimeConverter): New converters 

	* kiwi/ui/widgets/list.py
	(List):	Use datatype converter to convert to and from strings.
	Add some optimizations, save the converter instance and send it as an argument
	to the callbacks.
	
	* kiwi/ui/widgets/list.py (List.select_paths): New method, selects
	a list of paths.

	* kiwi/proxies.py (Proxy._setup_widgets): 
	Cleanups:
	Use consistent exception messages
	Add and use ProxyError instead of TypeError
	Add a new check to ensure that there are no unsupported
	widgets added.
	Change a warning into an exception
	(Proxy._initialize_widgets): Remove error handler,
	unused and a hack, unique clashes will be handled
	in other ways.

2005-12-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/listener.py:
	* kiwi/ui/test/player.py:

	Improve the generated output format to be readable, remove
	some old stuff.

2005-12-02  Johan Dahlin  <jdahlin@async.com.br>
